CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

PROJECT(MyANTLR VERSION 0.1.2 LANGUAGES CXX)
MESSAGE(STATUS "Project: ${PROJECT_NAME} ${PROJECT_VERSION}")

INCLUDE(cmake/InitMyCMake.cmake)
INIT_MYCMAKE()
INCLUDE(cmake/ANTLR4Generator.cmake)

INIT_PROJECT()

DOWNLOAD_ZIP(
        https://cdn.jsdelivr.net/gh/shimakaze09/MyData@main/MyANTLR/antlr4_11032025.zip
        antlr4_10032025.zip
        SHA256 5dbeabb84b694fb025fd032e27348752a77a22dd6972bf9ff8a8e3240f48d936
)


ADD_SUB_DIRS_REC(include)
ADD_SUB_DIRS_REC(src)

PACKAGE_NAME(PACKAGE_NAME)

INSTALL(FILES
        "config/Antlr4Package.md"
        "config/README.md"
        DESTINATION "${PACKAGE_NAME}/cmake"
)

EXPORT_TARGETS(DIRECTORIES "include;cmake")